--- a/leaderboard.html
+++ b/leaderboard.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table table-borderless" style="border-collapse: separate; border-spacing:0 20px;">
+                    <table class="table table-borderless">
                         <thead class="mb-5">
                           <tr>
                             <th scope="col">#</th>
@@ -120,7 +120,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -140,7 +140,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -160,7 +160,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -180,7 +180,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -200,7 +200,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -220,7 +220,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -240,7 +240,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -260,7 +260,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -280,7 +280,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -300,7 +300,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -320,7 +320,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -340,7 +340,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -360,7 +360,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -380,7 +380,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -400,7 +400,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -420,7 +420,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -440,7 +440,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -460,7 +460,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -480,7 +480,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -500,7 +500,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
@@ -520,7 +520,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 100%"></div>
                                     </div>
                                 </div>
                             </td>
