--- a/leaderboard.html
+++ b/leaderboard.html
@@ -123,7 +123,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 50%"></div>
+                                        <div class="progress-bar" style="width: 50%">50%</div>
                                     </div>
                                 </div>
                             </td>
@@ -143,7 +143,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 70%">70%</div>
                                     </div>
                                 </div>
                             </td>
@@ -163,7 +163,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 20%">20%</div>
                                     </div>
                                 </div>
                             </td>
@@ -183,7 +183,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 32%">32%</div>
                                     </div>
                                 </div>
                             </td>
@@ -203,7 +203,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 30%"> 30%</div>
                                     </div>
                                 </div>
                             </td>
@@ -223,7 +223,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -243,7 +243,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%"> 100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -263,7 +263,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100% </div>
                                     </div>
                                 </div>
                             </td>
@@ -283,7 +283,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -303,7 +303,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -323,7 +323,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -343,7 +343,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -363,7 +363,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -383,7 +383,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -403,7 +403,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -423,7 +423,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -443,7 +443,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -463,7 +463,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -483,7 +483,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -503,7 +503,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
@@ -523,7 +523,7 @@
                             <td> 
                                 <div class="table-progress">
                                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar" style="width: 100%"></div>
+                                        <div class="progress-bar" style="width: 100%">100%</div>
                                     </div>
                                 </div>
                             </td>
